--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "joi": "^14.3.1",
+    "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
     "query-string": "^6.8.1",
     "react": "^16.8.6",
