--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "query-string": "^6.8.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-dropdown-select": "^3.1.0",
+    "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-toastify": "^5.3.1"
