--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "joi": "^14.3.1",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
     "query-string": "^6.8.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
