--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bootbox": "^5.3.1",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
     "joi": "^14.3.1",
     "jquery": "^3.4.1",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "query-string": "^6.8.1",
